[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fish/Fish.gd" type="Script" id=1]
[ext_resource path="res://graphics/fish.png" type="Texture" id=2]
[ext_resource path="res://Bubbler.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/bite.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 4 )

[node name="Fish" type="KinematicBody2D" groups=[
"fish",
]]
collision_layer = 0
collision_mask = 66
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 3
region_rect = Rect2( 0, 0, 9, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="SwimTimer" type="Timer" parent="."]
autostart = true

[node name="Bubbler" parent="." instance=ExtResource( 3 )]

[node name="Bite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "sound"

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="SwimTimer" to="." method="_on_SwimTimer_timeout"]
